Added gpt3.5 for cogsmart keys

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
                     <option value="Romaji">Japanese Romaji</option>
                     <option value="English">English</option>
                     <option value="Spanish">Spanish</option>
+                    <option value="Russian">Russian</option>
+                    <option value="Vietnamese">Vietnamese</option>
+                    <option value="Chinese Mandarin">Chinese Mandarin</option>
+                    <option value="Chinese Cantonese">Chinese Cantonese</option>
                     <option value="French">French</option>
                     <option value="German">German</option>
                     <!-- Add more languages here -->
